# mplscience

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
mplscience/: __init__.py  core.py
mplscience/_styledata/: __init__.py  default.py  despine.py
tests/: test_mplscience.py
